--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <li><a class="buttons" href="{{ index.md }}">Home</a></li>
         </ul>
         <ul>
-            <li><a class="buttons" href="{{ currentResearch.md }}">Current Research</a></li>
+            <li><a class="buttons" href="{{ currentResearch.md }}">Research</a></li>
         </ul>
         <ul>
             <li><a class="buttons" href="{{ cv.md }}">CV</a></li>
