--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <li><a class="buttons research" href="{{ currentResearch.md }}">Research</a></li>
         </ul>
         <ul>
-            <li><a class="buttons cv" href="{{ http//github.com/lee3206.github.io/cv.md }}">CV</a></li>
+            <li><a class="buttons cv" href="{{ https://lee3206.github.io/cv.md }}">CV</a></li>
         </ul>
         <ul>
             <li><a class="buttons fun" href="{{ funProjects.md }}">Fun Projects</a></li>
