--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,13 +18,13 @@
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
         <ul>
-            <li><a class="buttons home" href="/index.md">Home</a></li>
+            <li><a class="buttons home" href="/index.html">Home</a></li>
         </ul>
         <ul>
             <li><a class="buttons research" href="/currentResearch.md">Research</a></li>
         </ul>
         <ul>
-            <li><a class="buttons cv" href="/cv.md">CV</a></li>
+            <li><a class="buttons cv" href="/cv.html">CV</a></li>
         </ul>
         <ul>
             <li><a class="buttons fun" href="/funProjects.md">Fun Projects</a></li>
