--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,17 +17,21 @@
       <header>
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
+        <!--Can refer to .md files as .html here to render as html-->
         <ul>
             <li><a class="buttons home" href="/index.html">Home</a></li>
         </ul>
         <ul>
-            <li><a class="buttons research" href="/currentResearch.md">Research</a></li>
+            <li><a class="buttons research" href="/currentResearch.hmtl">Research</a></li>
         </ul>
         <ul>
             <li><a class="buttons cv" href="/cv.html">CV</a></li>
         </ul>
         <ul>
-            <li><a class="buttons fun" href="/funProjects.md">Fun Projects</a></li>
+            <li><a class="buttons fun" href="/funProjects.html">Fun Projects</a></li>
+        </ul>
+        <ul>
+            <li><a class="buttons portfolio" href="/portfolio.html">Fun Projects</a></li>
         </ul>
         <ul>
           {% if site.show_downloads %}
