added html current research page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <li><a class="buttons fun" href="/funProjects.html">Fun Projects</a></li>
         </ul>
         <ul>
-            <li><a class="buttons portfolio" href="/portfolio.html">Fun Projects</a></li>
+            <li><a class="buttons portfolio" href="/portfolio.html">Portfolio</a></li>
         </ul>
         <ul>
           {% if site.show_downloads %}
